--- a/style.css
+++ b/style.css
@@ -36,7 +36,7 @@ html {
 .life-bar {
   width: 80%;
   height: 20px;
-  border: 1px solid #AAA;
+  border: 0;
 }
 
 .life-bar .life {
@@ -79,7 +79,9 @@ html {
   border-radius: 0;
   text-transform: uppercase;
   font-size: 1.1rem;
-  border: 1px solid gray;
+  border: 0;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.15);
+  cursor: pointer;
 }
 
 .btn.new-game {
@@ -105,4 +107,32 @@ html {
 .btn.give-up {
   background-color: #bbb;
   color: black;
+}
+
+/* Área dos Logs */
+
+.logs ul {
+  display: flex;
+  flex-direction: column;
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+.logs ul li {
+  display: flex;
+  justify-content: center;
+  margin: 4px 0;
+  padding: 3px 0;
+  font-weight: 600;
+  font-size: 1.1rem;
+}
+
+.logs ul li.player {
+  background-color: rgba(0, 21, 207, 0.5);
+  color: white;
+}
+
+.logs ul li.monster {
+  background-color: rgba(255, 0, 0, 0.49);
+  color: white;
 }
